testcases/good/templates/if-elif-endif.j2
{% if True %}
  {{ good }}
{% elif True %}
  {{ also_good }}
{% endif %}
