testcases/bad/templates/if-elif-eof.j2
{% if True %}
  {{ good }}
{% elif True %}
  {{ also_good }}
but now we should endif.
